--- a/about-me.html
+++ b/about-me.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -136,16 +136,19 @@
             </div>
           </div>
           <div class="about-me">
+            <div class="bg-small d-none d-md-block">
+              <img src="assets/img/darker-small.png" alt="ups" class="small">
+            </div>
             <div class="things-me">
               <h4>Name: <p class="colored">Andresoaea Victorita</p></h4>
               <h4>Age: <p class="colored">24</p></h4>
-              <h4>Personality traits: <p class="colored">creativity, high level of emotional intelligence, adaptability</p></h4>
+              <h4>Personality traits: <p class="colored">creativity, high level of emotional intelligence,<br> adaptability</p></h4>
               <h4>Convicted for: <p class="colored">limitless determination, perfectionism</p></h4>
               <h4>Duration of the sentence: <p class="colored">sentenced to life</p></h4>
               <h4>Where you can find her: <p class="colored">andresoaeavictoria@gmail.com</p></h4>
             </div>
             <div class="vic-photo">
-              <img src="assets/img/Vic.jpg" alt="ups" class="vic d-none d-md-block">
+              <img src="assets/img/Vic4.jpg" alt="ups" class="vic d-none d-md-block">
               <img src="assets/img/Vic2.jpg" alt="ups" class="vic d-md-none">
             </div>
           </div>
@@ -153,7 +156,7 @@
 
         <footer>
           <div class="attribution">
-            Created by &#160; <a class="name" href="#"> Victoria Andresoaea</a>&#160;  ©2021
+            Created by &#160; <a class="name" href="https://www.linkedin.com/in/victorita-andresoaea-330b14213/"> Victoria Andresoaea</a>&#160;  ©2021
           </div>
         </footer>
         
@@ -161,6 +164,5 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js" integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous"></script>
         <script src="js/script.js"></script>
-        <script src="js/about-me.js"></script>
     </body>
 </html>
