--- a/thoughts.html
+++ b/thoughts.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         
@@ -70,16 +70,16 @@
             <h3 class="page-author">Andresoaea Victorita</h3>
           </div>
           <div class="text">
-            <div class="page">
-              <h2 class="title">Atașamentul față de emoții</h2>
-              <p> Se spune că fiecare emoție, biologic, durează 90 de secunde. Un minut jumătate în care ceea ce se întâmplă în corpul nostru este incontrolabil. Tot ceea ce se întâmplă după, este atașamentul nostru față de emoție în sine. Raportat la faptul că unii oameni aleg să aibă chip senin și ochii calzi o viață, sau dimpotrivă, oameni ale căror frunți sunt încrețite, iar zâmbetul e scos din buzunar doar la nevoie, acel timp scurt în care nu avem controlul asupra a ceea ce gândim sau simțim e nesemnificativ. 
-                Adorăm să fim fericiți, dar cu atât mai mult ne place să suferim. Ne inundăm mintea cu gânduri, și gânduri..și gânduri, iar la final ne întrebăm de ce ni se îneacă corăbiile. Există o modalitate prin care te poți menține pe linia de plutire. Această curpinde două caracteristici esențiale: acceptarea și iubirea de sine.
-                Acceptarea se referă la conștientizarea faptului că o parte din evenimentele ce se produc în viața noastră sunt spontane, și pot veni din neant. Fie ele pozitive sau negative, trebuie acceptate ca și parte din noi. Universul întreg este bazat pe principul evoluției, pe cel al schimbării și al regenerării. Însuși actul de a alege să rămâi blocat într-un episod ce te-a marcat te pune în contradicție cu spațiul în care exiști. Viața e construită din momente, din care gustăm câte puțin. Cu toții știm că un fel de mâncare preferat, consumat zilnic, ajunge un fel de mâncare obișnuit, sau poate chiar de nesuportat. Astfel, putem spune că suntem privilegiați că fericirea nu este o constantă, cum  nu este nici nefericirea. Dinamica și spontaneitatea universului, sunt lucuruile ce ne mențin umani, emoționali.
-                Cât despre iubirea de sine, aceasta nu reprezintă idolatrizarea și urcarea pe un piedestal al propriului eu. Este despre a fi blând cu tine, atunci când ești supus greșelilor. Situațiile umilitoare, jenante, rușinea, experimentarea eșecului sunt în general lucrurile ce ne fac să ne mustrăm aspru, noi pe noi înșine.
-                Atunci când se întâmplă una dintre situațiile menționate, avem un colțișor în mintea noastră, în care ne izolăm și ne umilim, ne atribuim toate defectele existente, acțiune ce duce la o scădere și mai mare a încrederii în forțele proprii.
+            <div class="page first">
+              <h2 class="title">Atasamentul fata de emotii</h2>
+              <p> Se spune ca fiecare emotie, biologic, dureaza 90 de secunde. Un minut jumatate in care ceea ce se intampla in corpul nostru este incontrolabil. Tot ceea ce se intampla dupa, este atasamentul nostru fata de emotie in sine. Raportat la faptul ca unii oameni aleg sa aiba chip senin si ochii calzi o viata, sau dimpotriva, oameni ale caror frunti sunt incretite, iar zambetul e scos din buzunar doar la nevoie, acel timp scurt in care nu avem controlul asupra a ceea ce gandim sau simtim e nesemnificativ.</p>
+               <p> Adoram sa fim fericiti, dar cu atat mai mult ne place sa suferim. Ne inundam mintea cu ganduri, si ganduri..si ganduri, iar la final ne intrebam de ce ni se ineaca corabiile. Exista o modalitate prin care te poti mentine pe linia de plutire. Aceasta curpinde doua caracteristici esentiale: acceptarea si iubirea de sine.
+                Acceptarea se refera la constientizarea faptului ca o parte din evenimentele ce se produc in viata noastra sunt spontane, si pot veni din neant. Fie ele pozitive sau negative, trebuie acceptate ca si parte din noi. Universul intreg este bazat pe principul evolutiei, pe cel al schimbarii si al regenerarii. Insusi actul de a alege sa ramai blocat intr-un episod ce te-a marcat te pune in contradictie cu spatiul in care existi. Viata e construita din momente, din care gustam cate putin. Cu totii stim ca un fel de mancare preferat, consumat zilnic, ajunge un fel de mancare obisnuit, sau poate chiar de nesuportat. Astfel, putem spune ca suntem privilegiati ca fericirea nu este o constanta, cum  nu este nici nefericirea. Dinamica si spontaneitatea universului, sunt lucuruile ce ne mentin umani, emotionali.
+                Cat despre iubirea de sine, aceasta nu reprezinta idolatrizarea si urcarea pe un piedestal al propriului eu. Este despre a fi bland cu tine, atunci cand esti supus greselilor. Situatiile umilitoare, jenante, rusinea, experimentarea esecului sunt in general lucrurile ce ne fac sa ne mustram aspru, noi pe noi insine.
+              </p> <p> Atunci cand se intampla una dintre situatiile mentionate, avem un coltisor in mintea noastra, in care ne izolam si ne umilim, ne atribuim toate defectele existente, actiune ce duce la o scadere si mai mare a increderii in fortele proprii.
                 </p>
-                 <p>Chiar dacă lumea aceasta pare nedreaptă, și unii oameni par a avea totul, în timp ce alții nimic, cred totuși că există un echilibru. Acel echilibru se află în lucrurile pe care nu le știm, ci nu în aparențe. Legea universului spune că, dacă ești împlinit pe 9 planuri, va există un al 10-lea pe care-l vei eșua.
-                 Dacă crezi că ești sabotat, neîndreptățit, supus nesanselor, singurul care te sabotează ești tu însuți. Prin limitele puse, prin canalizarea energiei în direcții greșite, prin subevaluarea a ceea ce tu reprezinți.
+                 <p>Chiar daca lumea aceasta pare nedreapta, si unii oameni par a avea totul, in timp ce altii nimic, cred totusi ca exista un echilibru. Acel echilibru se afla in lucrurile pe care nu le stim, ci nu in aparente. Legea universului spune ca, daca esti implinit pe 9 planuri, va exista un al 10-lea pe care-l vei esua.
+                 Daca crezi ca esti sabotat, neindreptatit, supus nesanselor, singurul care te saboteaza esti tu insuti. Prin limitele puse, prin canalizarea energiei in directii gresite, prin subevaluarea a ceea ce tu reprezinti.
               </p>
             </div>
             <div class="page">
@@ -95,7 +95,7 @@
                </p>
             </div>
             <div class="page">
-              <h2 class="title">Despre şpăgari: si cei care dau si cei care iau</h2>
+              <h2 class="title">Despre spagari: si cei care dau si cei care iau</h2>
               <p>
                 Long story short, cum gandesc eu toata treaba: Era o zi cu soare cand un romanas de-al nostru a revenit in tara, poate dupa ani buni in care nu mai vazuse verdele leului romanesc. Acesta venise sa si rezolve niste probleme de sanatate, dar mai mult voia sa si tureze noul BMW prin sat, sa vada lumea ca are baiatu' si o duce bine. Si pt ca al nostru romanas nu prea avea rabdare, a impartit cu "mici" atentii in stanga si in dreapta, sa si rezolve omul problemele. Pe vremuri te duceai cu casul de branza si cu-n "Doamne ajuta" sa n-aiba omul intoleranta la lactoza, facand referire ironica la toate bolile prezentului, care existau si inainte, dar omul se simtea sanatos pt ca nu stia ca le are.</p>
                 <p>Revenind la prea-luminatul nostru romanas, acesta a dus vestea in sat ca trebuirile se pot rezolva rapid daca renuti la vestitul caş, si te prezinti cu ceva mai mult cash.
@@ -130,7 +130,7 @@
 
         <footer>
             <div class="attribution">
-              Created by &#160; <a class="name" href="#"> Victoria Andresoaea</a>&#160;  ©2021
+              Created by &#160; <a class="name" href="https://www.linkedin.com/in/victorita-andresoaea-330b14213/"> Victoria Andresoaea</a>&#160;  ©2021
             </div>
           </footer>
       
