--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -87,16 +88,16 @@
           <div class="col-md-6 my-3 poem-text">
             <h3 class="poem-title d-flex justify-content-center">Unghiuri</h3>
             <p class="poem unghiuri d-flex justify-content-center">
-              Mi-am înclinat viața la 45 de grade<br>
-              Cu unghi ce izvorăște chiar din răsărit;<br>
-              Pe o semidreaptă să urc vitejește,<br>
-              lar pe cea de a două să-mi plec capul când am obosit.<br>
+              Mi-am înclinat viata la 45 de grade<br>
+              Cu unghi ce izvoraste chiar din rasarit;<br>
+              Pe o semidreapta sa urc vitejeste,<br>
+              lar pe cea de a doua sa-mi plec capul cand am obosit.<br>
               <br>
-              M-am cuibărit în pântecul lui 90 de grade<br>
-              Și, voit, am lăsat ca pe alocuri să ne suprapunem,<br>
-              Efemer, ori poate până-n viața de apoi,<br>
-              Cert e că, noi, încă avem..<br>
-              ..un infinit de puncte să mai descompunem.<br>
+              M-am cuibarit in pantecul lui 90 de grade<br>
+              Și, voit, am lăsat ca pe alocuri sa ne suprapunem,<br>
+              Efemer, ori poate pana-n viața de apoi,<br>
+              Cert e ca, noi, inca avem..<br>
+              ..un infinit de puncte sa mai descompunem.<br>
              </p>
           </div>
           <div class="col-md-6 my-3 col-sm-12 d-flex justify-content-center">
@@ -108,35 +109,35 @@
             <img class="forest  illustration"  src="assets/img/forest-transp.png" alt="ups">
           </div>
           <div class="col-md-6 my-3 poem-text order-1 order-sm-2">
-            <h3 class="poem-title d-flex justify-content-center">Analiză</h3>
+            <h3 class="poem-title d-flex justify-content-center">Analiza</h3>
             <p class="poem d-flex justify-content-center">
               Semi eu, distorsionat <br>
-              Asimetric la pătrat <br>
+              Asimetric la patrat <br>
               Linii fine, riduri grele <br>
               Stau la umbra pleoapei mele. <br>
               Iris tern, etern placid <br>
               Buzele-mi cu acid <br>
-              Nu-n structură, suprafaţă, <br>
-              Ci-n cuvinte ce prind viață. <br>
+              Nu-n structura, suprafata, <br>
+              Ci-n cuvinte ce prind viata. <br>
           </p>
           </div>
         </div>
         <div class="row mx-5 d-md-flex align-items-center content">
           <div class="col-md-6 my-3 poem-text">
-            <h3 class="poem-title d-flex justify-content-center">Fotosinteză</h3>
+            <h3 class="poem-title d-flex justify-content-center">Fotosinteza</h3>
             <p class="poem d-flex justify-content-center">
-              Astăzi am sădit un gând,<br>
-              şi l-am udat pân-a-nflorit,<br>
-              apoi şi-a luat proporții egoiste<br>
-              ca în final să-mi domine <br>
-              ..tot teritoriul minții.<br>
+              Astazi am sadit un gand,<br>
+              si l-am udat pan-a-nflorit,<br>
+              apoi si-a luat proportii egoiste<br>
+              ca în final sa-mi domine <br>
+              ..tot teritoriul mintii.<br>
               --------<br>
-              Ucigător? <br>
-              vindecător? <br>
-              să-l las să-şi pună steagul înrobitor?<br>
-              sau să-l alung<br>
-              până nu-mi frâng <br>
-              zâmbetul meu ..naiv si tâmp..?
+              Ucigator? <br>
+              vindecator? <br>
+              sa-l las sa-si puna steagul înrobitor?<br>
+              sau sa-l alung<br>
+              pana nu-mi frang <br>
+              zambetul meu ..naiv si tamp..?
             </p>
           </div>
           <div class="col-md-6 my-3 d-flex justify-content-center">
@@ -150,47 +151,47 @@
           <div class="col-md-6 my-3 order-1 order-sm-2 poem-text">
             <h3 class="poem-title d-flex justify-content-center">C-uri</h3>
             <p class="poem d-flex justify-content-center">
-              Care-i limita de gânduri<br>
-              Ce se-ndreaptă către-un om?<br>
-              Ce semnifică iubirea<br>
-              Când te lasă fără somn?!<br>
-              Cui să cerem socoteală,<br>
-              Când te simți ca la nebuni?<br>
-              Cui să datorăm triumful<br>
-              Când  din răi ne facem buni?<br>
-              Cât să mai îndure cordul,<br>
-              Ce se-agită-n aritmie?<br>
-              Care-i scopul viețuirii<br>
-              Când ce am, nu-ți dau și ție?<br>
-              Ce-mi poți spune despre suflet<br>
+              Care-i limita de ganduri<br>
+              Ce se-ndreapta catre-un om?<br>
+              Ce semnifica iubirea<br>
+              Cand te lasa fara somn?!<br>
+              Cui sa cerem socoteala,<br>
+              Cand te simti ca la nebuni?<br>
+              Cui să datoram triumful<br>
+              Cand  din rai ne facem buni?<br>
+              Cat sa mai îndure cordul,<br>
+              Ce se-agita-n aritmie?<br>
+              Care-i scopul vietuirii<br>
+              Cand ce am, nu-ti dau si tie?<br>
+              Ce-mi poti spune despre suflet<br>
               Care-i greutatea lui?<br>
-              Când onoarea e pătată<br>
-              Cât e vina banului?<br>
-              Ce e omul, azi ori mâine<br>
-              Câte lui i se cuvin?<br>
-              Cât mai fuge de el însuși<br>
+              Cand onoarea e patata<br>
+              Cat e vina banului?<br>
+              Ce e omul, azi ori maine<br>
+              Cate lui i se cuvin?<br>
+              Cat mai fuge de el însusi<br>
               Ca de-un gol ce-i mult prea plin?<br>
             </p>
           </div>
         </div>
         <div class="row mx-md-5 mx-3 d-md-flex align-items-center content">
           <div class="col-12 sneak-border poem-text proza">
-            <h3 class="poem-title d-flex justify-content-center proza-title">Atașamentul față de emoții</h3>
+            <h3 class="poem-title d-flex justify-content-center proza-title">Atasamentul fata de emotii</h3>
             <p class="poem d-flex justify-content-center proza-text">
-              Se spune că fiecare emoție, biologic, durează 90 de secunde. Un minut jumătate în care ceea ce se întâmplă în corpul nostru este incontrolabil. Tot ceea ce se întâmplă după, este atașamentul nostru față de emoție în sine. Raportat la faptul că unii oameni aleg să aibă chip senin și ochii calzi o viață, sau dimpotrivă, oameni ale căror frunți sunt încrețite, iar zâmbetul e scos din buzunar doar la nevoie, acel timp scurt în care nu avem controlul asupra a ceea ce gândim sau simțim e nesemnificativ. 
-              Adorăm să fim fericiți, dar cu atât mai mult ne place să suferim. Ne inundăm mintea cu gânduri, și gânduri..și gânduri, iar la final ne întrebăm de ce ni se îneacă corăbiile. Există o modalitate prin care te poți menține pe linia de plutire. Această curpinde două caracteristici esențiale: acceptarea și iubirea de sine.
-              Acceptarea se referă la conștientizarea faptului că o parte din evenimentele ce se produc în viața noastră sunt spontane, și pot veni din neant. Fie ele pozitive sau negative, trebuie acceptate ca și parte din noi. Universul întreg este bazat pe principul evoluției, pe cel al schimbării și al regenerării. Însuși actul de a alege să rămâi blocat într-un episod ce te-a marcat te pune în contradicție cu spațiul în care exiști. Viața e construită din momente, din care gustăm câte puțin. Cu toții știm că un fel de mâncare preferat, consumat zilnic, ajunge un fel de mâncare obișnuit, sau poate chiar de nesuportat. Astfel, putem spune că suntem privilegiați că fericirea nu este o constantă, cum  nu este nici nefericirea. Dinamica și spontaneitatea universului, sunt lucuruile ce ne mențin umani, emoționali.
-              Cât despre iubirea de sine, aceasta nu reprezintă idolatrizarea și urcarea pe un piedestal al propriului eu. Este despre a fi blând cu tine, atunci când ești supus greșelilor. Situațiile umilitoare, jenante, rușinea, experimentarea eșecului sunt în general lucrurile ce ne fac să ne mustrăm aspru, noi pe noi înșine.
-              Atunci când se întâmplă una dintre situațiile menționate, avem un colțișor în mintea noastră, în care ne izolăm și ne umilim, ne atribuim toate defectele existente, acțiune ce duce la o scădere și mai mare a încrederii în forțele proprii.
+              Se spune ca fiecare emotie, biologic, dureaza 90 de secunde. Un minut jumatate in care ceea ce se intampla in corpul nostru este incontrolabil. Tot ceea ce se intampla dupa, este atasamentul nostru fata de emotie in sine. Raportat la faptul ca unii oameni aleg sa aiba chip senin si ochi calzi o viata, sau dimpotriva, oameni ale caror frunti sunt incretite, iar zambetul e scos din buzunar doar la nevoie, acel timp scurt in care nu avem controlul asupra a ceea ce gandim sau simtim e nesemnificativ. 
+            Adoram sa fim fericiti, dar cu atat mai mult ne place sa suferim. Ne inundam mintea cu ganduri, si ganduri..si ganduri, iar la final ne intrebam de ce ni se ineaca corabiile. Exista o modalitate prin care te poti mentine pe linia de plutire. Aceasta curpinde doua caracteristici esentiale: acceptarea si iubirea de sine.
+            Acceptarea se refera la constientizarea faptului ca o parte din evenimentele ce se produc in viata noastra sunt spontane, si pot veni din neant. Fie ele pozitive sau negative, trebuie acceptate ca si parte din noi. Universul intreg este bazat pe principul evolutiei, pe cel al schimbarii si al regenerarii. Insusi actul de a alege sa ramai blocat intr-un episod ce te-a marcat te pune in contradictie cu spatiul in care existi. Viata e construita din momente, din care gustam cate putin. Cu totii stim ca un fel de mancare preferat, consumat zilnic, ajunge un fel de mancare obisnuit, sau poate chiar de nesuportat. Astfel, putem spune ca suntem privilegiati ca fericirea nu este o constanta, cum  nu este nici nefericirea. Dinamica si spontaneitatea universului, sunt lucuruile ce ne mentin umani, emotionali.
+            Cat despre iubirea de sine, aceasta nu reprezinta idolatrizarea si urcarea pe un piedestal al propriului eu. Este despre a fi bland cu tine, atunci cand esti supus greselilor. Situatiile umilitoare, jenante, rusinea, experimentarea esecului sunt in general lucrurile ce ne fac sa ne mustram aspru, noi pe noi insine.
+          Atunci cand se intampla una dintre situatiile mentionate, avem un coltisor in mintea noastra, in care ne izolam si ne umilim, ne atribuim toate defectele existente, actiune ce duce la o scadere si mai mare a increderii in fortele proprii.
                  <br>
-               Chiar dacă lumea aceasta pare nedreaptă, și unii oameni par a avea totul, în timp ce alții nimic, cred totuși că există un echilibru. Acel echilibru se află în lucrurile pe care nu le știm, ci nu în aparențe. Legea universului spune că, dacă ești împlinit pe 9 planuri, va există un al 10-lea pe care-l vei eșua.
-               Dacă crezi că ești sabotat, neîndreptățit, supus nesanselor, singurul care te sabotează ești tu însuți. Prin limitele puse, prin canalizarea energiei în direcții greșite, prin subevaluarea a ceea ce tu reprezinți.
+              Chiar daca lumea aceasta pare nedreapta, si unii oameni par a avea totul, in timp ce altii nimic, cred totusi ca exista un echilibru. Acel echilibru se afla in lucrurile pe care nu le stim, ci nu in aparente. Legea universului spune ca, daca esti implinit pe 9 planuri, va exista un al 10-lea pe care-l vei esua.
+          Daca crezi ca esti sabotat, neindreptatit, supus nesanselor, singurul care te saboteaza esti tu insuti. Prin limitele puse, prin canalizarea energiei in directii gresite, prin subevaluarea a ceea ce tu reprezinti.
             </p>
           </div>
         </div>
         <footer>
           <div class="attribution">
-            Created by &#160; <a class="name" href="#"> Victoria Andresoaea</a>&#160;  ©2021
+            Created by &#160; <a class="name" href="https://www.linkedin.com/in/victorita-andresoaea-330b14213/"> Victoria Andresoaea</a>&#160;  ©2021
           </div>
         </footer>
       </div>
