--- a/about-me.html
+++ b/about-me.html
@@ -131,7 +131,7 @@
             <img src="assets/img/darker.png" alt="ups" class="darker d-none d-md-block">
             <img src="assets/img/darker-mobile.png" alt="ups" class="darker d-md-none">
             <div id="text">
-              <p>Passion is born out of with curiosity, the curiosity to discover things, but also to create new ones. Both the psychology, which I am passionate about, and my artistic inclinations, help me to find answers and solutions where problems scream for help.</p>
+              <p>Passion is born out of curiosity, the curiosity to discover things, but also to create new ones. Both the psychology, which I am passionate about, and my artistic inclinations, help me to find answers and solutions where problems scream for help.</p>
               <p>I am a novice in IT, but driven by the desire to discover as much as possible, I know that it is a field in which there is always something new to learn, and this promises me a continuous evolution, and new goals to achieve constantly.
               </p>
             </div>
